force-app/main/default/objects/BigDataAlert__c/BigDataAlert__c.object-meta.xml
<CustomObject>
    <label>BigData Alert</label>
    <nameField>
        <displayFormat>BDA-{00000000}</displayFormat>
        <label>BigData Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BigData Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>