force-app/main/default/objects/BigDataAlert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud Alert</fullName>
            </value>
            <value>
                <fullName>METRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>