force-app/main/default/objects/BigDataAlert__c/fields/Date_Synced__c.field-meta.xml
<CustomField>
    <fullName>Date_Synced__c</fullName>
    <label>Date Synced</label>
    <type>Date</type>
</CustomField>