force-app/main/default/objects/BigDataAlert__c/fields/End_Activity__c.field-meta.xml
<CustomField>
    <fullName>End_Activity__c</fullName>
    <label>End Activity</label>
    <type>DateTime</type>
</CustomField>