force-app/main/default/objects/BigDataAlert__c/fields/End_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Activity_Date__c</fullName>
    <label>End Activity Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>