force-app/main/default/objects/BigDataAlert__c/fields/End_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Activity_Time__c</fullName>
    <label>End Activity Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>