force-app/main/default/objects/BigDataAlert__c/fields/Frequency_Most_Transferred_Item__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Most_Transferred_Item__c</fullName>
    <label>Frequency Most Transferred Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>