force-app/main/default/objects/BigDataAlert__c/fields/is_super_user__c.field-meta.xml
<CustomField>
    <fullName>is_super_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Super User</label>
    <type>Checkbox</type>
</CustomField>