force-app/main/default/objects/BigDataAlert__c/fields/Item_Name_Most_Transferred_Item__c.field-meta.xml
<CustomField>
    <fullName>Item_Name_Most_Transferred_Item__c</fullName>
    <label>Item Name Most Transferred Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>