force-app/main/default/objects/BigDataAlert__c/fields/Number_Suspicious_Paths__c.field-meta.xml
<CustomField>
    <fullName>Number_Suspicious_Paths__c</fullName>
    <label>Number Suspicious Paths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>