force-app/main/default/objects/BigDataAlert__c/fields/Number_Transferred_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_Transferred_Items__c</fullName>
    <label>Number Transferred Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>