force-app/main/default/objects/BigDataAlert__c/fields/Start_Activity__c.field-meta.xml
<CustomField>
    <fullName>Start_Activity__c</fullName>
    <label>Start Activity</label>
    <type>DateTime</type>
</CustomField>