force-app/main/default/objects/BigDataAlert__c/fields/Start_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Activity_Time__c</fullName>
    <label>Start Activity Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>