force-app/main/default/objects/BigDataAlert__c/fields/Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Template_Branding__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-3198</description>
    <formula>IF(Account__r.Target_Product__c = &apos;MINI&apos;,&apos;MINI&apos;, &apos;PRO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Branding</label>
    <type>Text</type>
</CustomField>