force-app/main/default/objects/BigDataAlert__c/fields/Text_is_super_user__c.field-meta.xml
<CustomField>
    <fullName>Text_is_super_user__c</fullName>
    <formula>IF(is_super_user__c,&quot;Ja&quot;,&quot;Nein&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text: is_super_user</label>
    <type>Text</type>
</CustomField>