force-app/main/default/objects/BigDataAlert__c/fields/text_item_transfer_indicator__c.field-meta.xml
<CustomField>
    <fullName>text_item_transfer_indicator__c</fullName>
    <formula>IF( waggon_wheel_item_transfer_indicator__c , &quot;AUFFÄLLIG!&quot;, &quot;unauffällig&quot; )</formula>
    <label>Text: item_transfer_indicator</label>
    <type>Text</type>
</CustomField>