force-app/main/default/objects/BigDataAlert__c/fields/Text_suspicious_path_indicator__c.field-meta.xml
<CustomField>
    <fullName>Text_suspicious_path_indicator__c</fullName>
    <formula>IF( waggon_wheel_suspicious_path_indicator__c , &quot;AUFFÄLLIG!&quot;, &quot;unauffällig&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text: suspicious_path_indicator</label>
    <type>Text</type>
</CustomField>