force-app/main/default/objects/BigDataAlert__c/fields/Upper_Bound_Potential_Damage__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound_Potential_Damage__c</fullName>
    <label>Upper Bound Potential Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>