force-app/main/default/objects/BigDataAlert__c/fields/User_UUID__c.field-meta.xml
<CustomField>
    <fullName>User_UUID__c</fullName>
    <label>User UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>