force-app/main/default/objects/BigDataAlert__c/fields/Venue_Id__c.field-meta.xml
<CustomField>
    <fullName>Venue_Id__c</fullName>
    <label>Venue Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>