force-app/main/default/objects/BigDataAlert__c/fields/venue_name__c.field-meta.xml
<CustomField>
    <fullName>venue_name__c</fullName>
    <label>venue_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>