force-app/main/default/objects/BigDataAlert__c/fields/VenueText__c.field-meta.xml
<CustomField>
    <fullName>VenueText__c</fullName>
    <formula>TEXT(Venue_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VenueText</label>
    <type>Text</type>
</CustomField>