force-app/main/default/objects/BigDataAlert__c/fields/waggon_wheel_longevity_indicator__c.field-meta.xml
<CustomField>
    <fullName>waggon_wheel_longevity_indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>waggon_wheel_longevity_indicator</label>
    <type>Checkbox</type>
</CustomField>