force-app/main/default/objects/BigDataAlert__c/fields/waggon_wheel_number_subindications__c.field-meta.xml
<CustomField>
    <fullName>waggon_wheel_number_subindications__c</fullName>
    <label>waggon_wheel_number_subindications</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>