force-app/main/default/objects/BigDataAlert__c/fields/Wagon_Wheel_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Wagon_Wheel_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wagon Wheel Indicator</label>
    <type>Checkbox</type>
</CustomField>