force-app/main/default/objects/BigDataAlert__c/fields/wagon_wheel_link_report_variable_part__c.field-meta.xml
<CustomField>
    <fullName>wagon_wheel_link_report_variable_part__c</fullName>
    <label>wagon_wheel_link_report_variable_part</label>
    <length>2222</length>
    <type>LongTextArea</type>
</CustomField>