force-app/main/default/objects/BigDataAlert__c/fields/wagon_wheel_lower_bound_potential_damage__c.field-meta.xml
<CustomField>
    <fullName>wagon_wheel_lower_bound_potential_damage__c</fullName>
    <label>wagon wheel lower bound potential damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>