force-app/main/default/objects/BigDataAlert__c/fields/wagon_wheel_name_most_suspicious_path__c.field-meta.xml
<CustomField>
    <fullName>wagon_wheel_name_most_suspicious_path__c</fullName>
    <label>wagon_wheel_name_most_suspicious_path</label>
    <type>TextArea</type>
</CustomField>