force-app/main/default/objects/BigDataAlert__c/fields/wagon_wheel_number_suspicious_paths__c.field-meta.xml
<CustomField>
    <fullName>wagon_wheel_number_suspicious_paths__c</fullName>
    <label>wagon_wheel_number_suspicious_paths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>