force-app/main/default/objects/BigDataAlert__c/fields/Z_Counter__c.field-meta.xml
<CustomField>
    <fullName>Z_Counter__c</fullName>
    <label>Z Counter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>